--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -53,7 +53,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hair Shaving and Cuts"
+                android:text="Hair Shaving and Cuts - 80 ILS"
                 android:textSize="18sp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
@@ -85,7 +85,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Haircut with Beard Styling"
+                android:text="Haircut W Beard Styling-100 ILS"
                 android:textSize="18sp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
@@ -116,7 +116,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hair Washing"
+                android:text="Hair Washing - 50 ILS"
                 android:textSize="18sp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
@@ -148,7 +148,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Beard Trimming"
+                android:text="Beard Trimming - 45 ILS"
                 android:textSize="18sp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
